--- a/index.html
+++ b/index.html
@@ -103,6 +103,29 @@
       <div class="swiper-pagination"></div>
     </div>
   </section>
+  <section class="py-16 bg-black text-white px-8">
+  <h2 class="text-4xl font-bold text-center text-yellow-300 mb-6">📜 A Birthday Poem for Our Beloved HOD</h2>
+  <div class="max-w-3xl mx-auto text-lg leading-relaxed">
+    <p class="mb-4">In halls of wisdom, you stand so tall,</p>
+    <p class="mb-4">A guiding star to one and all.</p>
+    <p class="mb-4">With every word and lesson taught,</p>
+    <p class="mb-4">You shaped the minds, inspired thought.</p>
+
+    <p class="mb-4">From chalk to code, from books to dreams,</p>
+    <p class="mb-4">You've led us through with thoughtful means.</p>
+    <p class="mb-4">Not just a teacher—but a flame,</p>
+    <p class="mb-4">Who lifts us up to earn a name.</p>
+
+    <p class="mb-4">Your patience, calm, and endless grace,</p>
+    <p class="mb-4">Have made our world a better place.</p>
+    <p class="mb-4">So on this day, we cheer for you,</p>
+    <p class="mb-4">With heartfelt thanks so deep and true.</p>
+
+    <p class="mb-4">Happy Birthday to the one we admire,</p>
+    <p class="mb-4">You light our paths, you spark our fire. 🔥</p>
+  </div>
+</section>
+
 
   <section class="py-20 bg-gradient-to-b from-gray-900 to-black">
     <h2 class="text-4xl text-center mb-10 font-semibold">📸 Cherished Memories</h2>
@@ -115,6 +138,24 @@
             <img src="IMG_5115.JPG" style="width: 300px; height: 300px; object-fit: cover;" class="rounded-xl transform hover:scale-105 transition duration-500 shadow-xl" alt="Memory 3">
     </div>
   </section>
+  <section style="padding: 5rem 2rem; background: linear-gradient(to bottom right, #1f1f2e, #0d0d14); color: #f5f5f5; font-family: 'Playfair Display', serif; border-radius: 1rem; box-shadow: 0 0 25px rgba(255, 215, 0, 0.1); max-width: 48rem; margin: auto; text-align: center;">
+  <h2 style="font-size: 2.75rem; color: #FFD700; margin-bottom: 2rem; text-shadow: 0 0 10px rgba(255, 215, 0, 0.3);">💫 दिल की गहराई से... सर के नाम</h2>
+  <div style="font-size: 1.25rem; line-height: 2;">
+    <p style="margin-bottom: 1rem;">कभी डाँट में छुपा था प्यार,</p>
+    <p style="margin-bottom: 1rem;">कभी खामोशी में समझदारी।</p>
+    <p style="margin-bottom: 1rem;">हम भटक जाते तो आप थे रास्ता,</p>
+    <p style="margin-bottom: 1rem;">हम थक जाते तो आप थे हौसला।</p>
+    <p style="margin-bottom: 1rem;">एक शिक्षक नहीं — आप तो हमारे सफ़र का सबसे ख़ूबसूरत मोड़ हो।</p>
+    <p style="margin-bottom: 1rem;">किताबों से ज़्यादा, आपने ज़िंदगी पढ़ाई है,</p>
+    <p style="margin-bottom: 1rem;">और उस हर सीख में आपने अपने सपने लगाए हैं।</p>
+    <p style="margin-bottom: 1rem;">सर, अगर आज हम बेहतर हैं, तो उसमें आपकी परछाईं है।</p>
+    <p style="margin-top: 2rem; margin-bottom: 1rem; font-weight: bold; color: #FFD700;">🎂 जन्मदिन पर बस यही दुआ है —</p>
+    <p style="margin-bottom: 1rem;">जहाँ भी रहें, हमेशा मुस्कुराते रहें,</p>
+    <p style="margin-bottom: 1rem;">जैसे आपने हमें जीना सिखाया है,</p>
+    <p style="margin-bottom: 1rem;">वैसे ही हर दिन को अपना बनाएँ। 🌸</p>
+  </div>
+</section>
+
 
   <section class="py-20">
     <div class="container mx-auto px-6">
